--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,59 +1,39 @@
-name: CI/CD Pipeline
+name: Simple CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main" ]   # Runs when you push to main branch
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]   # Runs for PRs to main branch
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: Set up Java (you can change version if needed)
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
+      - name: Run build step
+        run: echo "Building project..."
 
-      # Step 3: Build the project (Maven example)
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-
-      # Step 4: Run tests
       - name: Run tests
-        run: mvn test
+        run: echo "Running tests..."
 
-      # Step 5: Upload artifact
-      - name: Upload build artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: java-app
-          path: target/*.jar
+          name: dummy-artifact
+          path: README.md   # just uploads README as an example
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'   # Only deploy from main branch
+    if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Example deployment to remote server via SSH
-      - name: Deploy to server
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            cd /var/www/myapp
-            git pull origin main
-            systemctl restart tomcat
+      - name: Deploy step
+        run: echo "Deploying project..."
